--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ unnötige Klicks, was den Einstieg erleichtert. Nach mehreren Sessions
 haben wir die Kategorien neu sortiert und Lieblingspfade markiert. Das
 zeigt, wie sich Routinen bilden und wann es Zeit ist, etwas Neues
 auszuprobieren. Später teilen wir, wie das in unserer <strong>vegas hero
-review</strong> gewichtet wurde.</p>
+review</strong> gewichtet wurde. Viele Spieler entdecken <a href="https://yvys.at" title="plinko">plinko</a> als unterhaltsames Spielprinzip, bei dem Spannung und Zufall auf einfache Weise kombiniert werden.</p>
 <h3 id="mobile-nutzung-und-app-gefühl"><strong>Mobile nutzung und app-gefühl</strong></h3>
 <p>Am Smartphone zählt vor allem, wie schnell du von A nach B kommst.
 Wichtige Buttons bleiben groß genug, und Text bricht sauber um, ohne die
