--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ sich im Alltag bewähren. So merkst du schnell, wie sich <strong>vegashero
 online</strong> im täglichen Gebrauch anfühlt.</p>
 <h2 id="spielangebot-und-bedienung"><strong>Spielangebot und bedienung</strong></h2>
 <p>Wer Spiele öffnet, will kurze Wege und eine ruhige Oberfläche.
-<strong>vegashero casino</strong> setzt deutlich auf Übersicht, damit Kategorien und
+<strong><a href="https://vegas-hero.co.at" title="vegas hero">vegas hero</a> casino</strong> setzt deutlich auf Übersicht, damit Kategorien und
 Filter zügig erreichbar sind. Bei der Suche helfen klare Begriffe und
 eine feste Struktur, sodass du nicht zwischen Menüs hängen bleibst. Das
 Tempo bleibt auch dann stabil, wenn viele Titel verfügbar sind, und die
