--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ Hinweise nicht im Kleingedruckten verschwinden. Unsere Notizen zeigen,
 wie <strong>casino vegashero</strong> solche Punkte handhabt und welche Gewohnheiten
 sich im Alltag bewähren. Wer Ordnung hält, behält den Überblick und
 erspart sich Wartezeiten. So entsteht ein Bild, das nüchtern und
-pragmatisch bleibt.</p>
+pragmatisch bleibt. Viele Spieler entdecken <a href="https://spin-granny.at" title="spin granny">spin granny</a> als unterhaltsame Ergänzung zu ihren Online-Glücksspielrunden.</p>
 <h3 id="ein--und-auszahlungen"><strong>Ein- und auszahlungen</strong></h3>
 <p>Am bequemsten sind Wege, die ohne Umwege funktionieren und verlässlich
 dokumentiert sind. Einzahlungen und Auszahlungen sollten dieselbe
